Fixed problem with whitespace wrapping in galileo and wonderers due to nowrap on amazing which was inherited.

--- a/assets/css/galileo.styl
+++ b/assets/css/galileo.styl
@@ -25,6 +25,8 @@
 .galileo .story-text
 	@extend .amazing .story-text
 	
+	white-space normal
+	
 	color $TEXT_BLUE_LIGHT
 	width 500px
 	height 75px
