--- a/assets/css/wonderers.styl
+++ b/assets/css/wonderers.styl
@@ -11,6 +11,8 @@
 .wonderers .story-text
 	@extend .amazing .story-text
 	
+	white-space normal
+	
 .wonderers .story-text:before
 	display none
 	
